# espn-api-orm

./: README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
espn_api_orm/: consts.py
espn_api_orm/calendar/: api.py  schema.py
espn_api_orm/event/: api.py  schema.py
espn_api_orm/generic/: api.py  schema.py
espn_api_orm/league/: api.py  schema.py
espn_api_orm/odds/: api.py
espn_api_orm/scoreboard/: api.py  schema.py
espn_api_orm/season/: api.py  schema.py
espn_api_orm/sport/: api.py  schema.py
espn_api_orm/team/: api.py  schema.py
espn_api_orm/venue/: api.py  schema.py
examples/: get_calendar.py  get_season.py  get_team.py
tests/: test_calendar.py  test_odds.py  test_scoreboard.py  test_season.py  test_sport.py  test_team.py
