[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name='espn-api-orm'
authors = [
    {name='TheEdgePredictor', email='theedgepredictor@gmail.com'},
    {name='Charlie Sergeant', email='charlesdsgt@gmail.com'},
]
description = "A Python interface for the ESPN API"
readme = "README.md"
requires-python = ">= 3.8"
keywords = ["data science", "ORM", "sports"]
classifiers=[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
version = '0.0.8'

dependencies = [
    "pydantic > 2.0.0",
    "requests >=2.31.0",
]

[project.optional-dependencies]
test = [
    "pytest > 7.0.0",
]

[project.urls]
Repository = "https://github.com/theedgepredictor/espn-api-orm"
Homepage = "https://github.com/theedgepredictor/espn-api-orm"
Issues = "https://github.com/theedgepredictor/espn-api-orm/issues"
